--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 rdoc
 pkg
 *.gem
+
+# Dummy App
+spec/dummy/db/*.sqlite3
+spec/dummy/db/*.sqlite3-journal
+spec/dummy/log/*.log
+spec/dummy/tmp/
+spec/dummy/.sass-cache
