--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
-script: "bundle exec rake test"
+script: "rake spec"
 
 rvm:
   - 1.9.3
   - 2.0.0
+
+env:
+  - DB=sqlite
+  - DB=mysql
+  - DB=postgresql
+
+before_script:
+  - cd spec/dummy; bundle exec rake db:setup; cd ../..
+  - cd spec/dummy; bundle rake db:test:prepare; cd ../..
 
 bundler_args: "--binstubs --without development"
 
