Fix config/datebase.yml for sqlite.

--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -10,8 +10,7 @@
 
 sqlite: &sqlite
   adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  database: db/test.sqlite3
 
 mysql: &mysql
   adapter: mysql2
