--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
-# Rails Gem
-# =========
-# Generated
-rdoc
-pkg
-*.gem
+# Bundler
 .bundle
 
-# Dummy App
+# Tests
 spec/dummy/db/*.sqlite3
 spec/dummy/db/*.sqlite3-journal
 spec/dummy/log/*.log
 spec/dummy/tmp/
 spec/dummy/.sass-cache
+
+# Docs
+rdoc
+
+# Gem
+pkg
+*.gem
