Don't enforce encoding hints with rubocop.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -36,6 +36,10 @@ StringLiterals:
 WordArray:
   Enabled: false
 
+# Don't enforce encoding hints
+Style/Encoding:
+  Enabled: false
+
 # Specify desired delimiters for percent literals
 PercentLiteralDelimiters:
   PreferredDelimiters:
